bug fix with the background color on mobile view, code cleanup

--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -15,4 +15,6 @@ html, body{
   margin: 0;
   height: 100%;
   width: 100%;
+  overflow: auto;
+  background-color: $very-dark-blue;
 }
