--- a/src/assets/sass/main/main.scss
+++ b/src/assets/sass/main/main.scss
@@ -1,5 +1,6 @@
+//Setting the color here does not work for mobile view , set it at the body
 .main{
-  background: $very-dark-blue;
+  //background: $very-dark-blue;
   margin: 0;
   padding: 0;
   height: 100%;
